--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,12 @@
 
     <!-- Template Main JS File -->
     <!-- <script src="assets/js/main.js"></script> -->
-
+  
+    <script>
+      window.replainSettings = { id: 'afabc504-60a6-4b83-aa7d-366fed33c8f7' };
+      (function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+      var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+      })('https://widget.replain.cc/dist/client.js');
+    </script>
   </body>
 </html>
