fixed numerous things

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     
     <!-- OG Meta Tags-->
-    <meta property="og:url" content="https://ms-jahan.xyz" />
+    <meta property="og:url" content="https://ms-jahan.live" />
     <meta property="og:type" content="profile" />
     
     <meta property="profile:first_name" content="Md. Sarwar Jahan" />
