--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
     <!-- Template Main JS File -->
-    <!-- <script src="assets/js/main.js"></script> -->
+    <script src="assets/js/main.js"></script>
   
     <script>
       window.replainSettings = { id: 'afabc504-60a6-4b83-aa7d-366fed33c8f7' };
