--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <h4></h4>
             </div>
           </div>
-          <div class="swiper-slide" data-swiper-slide-index="2" style="width: 406.667px; margin-right: 20px;"
+          <!-- <div class="swiper-slide" data-swiper-slide-index="2" style="width: 406.667px; margin-right: 20px;"
             role="group" aria-label="6 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>Very professional, experienced, and patient.<i
@@ -449,7 +449,7 @@
               <h3>design17 (Anonymous)</h3>
               <h4></h4>
             </div>
-          </div>
+          </div> -->
         <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span
             class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button"
             aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet" tabindex="0" role="button"
