--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a target="_blank"
                       href="https://sabit.dev">sabit.dev</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 9696-761785</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Narsingdi, Dhaka, Bangladesh</span>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhanmondi, Dhaka, Bangladesh</span>
                 </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>University:</strong> <span><a target="_blank"
                       href="https://ist.edu.bd/">Institute of Science and Technology</a></span></li>
@@ -479,7 +479,7 @@
             <h4>Md. Sarwar Jahan Sabit</h4>
             <p><em>With over two decades of computer experience, I've been providing technical support to family, friends, and neighbors while passionately pursuing a BSc in Computer Science. I am a cybersecurity enthusiast and an innovative and deadline-driven App Developer with expertise in Web and App Development, Linux, and more. With 3+ years of experience, I specialize in designing and developing user-centered web and mobile applications from initial concept to final, polished deliverables. Dedicated to building a successful IT career, I am continuously expanding my knowledge in emerging technologies.</em></p>
             <ul>
-              <li>Palash, Narsingdi, Bangladesh</li>
+              <li>Dhanmondi, Dhaka, Bangladesh</li>
               <li>+880 9696-761785</li>
               <li>contact@sabit.dev</li>
             </ul>
