--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <!-- ======= Testimonials ======= -->
     <div class="testimonials container">
       <div class="section-title">
-        <h2>Testimonials (Nothing but will be soon!)</h2>
+        <h2>Testimonials</h2>
       </div>
       <div
         class="testimonials-slider swiper-container swiper-container-initialized swiper-container-horizontal swiper-container-pointer-events"
