Test fix testinomial slider

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <h4></h4>
             </div>
           </div>
-          <!-- <div class="swiper-slide" data-swiper-slide-index="2" style="width: 406.667px; margin-right: 20px;"
+          <div class="swiper-slide" data-swiper-slide-index="2" style="width: 406.667px; margin-right: 20px;"
             role="group" aria-label="6 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>Very professional, experienced, and patient.<i
@@ -410,7 +410,7 @@
               <h4>Wordpress Developer</h4>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="2"
+          <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="4"
             style="width: 406.667px; margin-right: 20px;" role="group" aria-label="8 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>I recently had the pleasure of working with Sarwar on the workflow for make.com. Their expertise, attention to detail, and dedication resulted in a flawless execution. The end product exceeded all our expectations. I was particularly impressed with how they tackled challenges and ensured that our objectives were met. I would highly recommend Sarwar for any project, and I look forward to collaborating with them again in the future. Truly top-notch work! Furthermore, Sarwar's exceptional communication skills made the collaboration seamless and efficient. At every stage, they kept us informed, welcomed feedback, and demonstrated a profound understanding of our vision. HIGHLY RECOMMEND!<i
@@ -420,7 +420,7 @@
               <h4>Senior Quality Engineer at Micron</h4>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="3"
+          <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="0"
             style="width: 406.667px; margin-right: 20px;" role="group" aria-label="9 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>His knowledge is very good and he could help me directly via messaging before i had even ordered a gig. I could have already used that information and do it myself, and I think that service of him to really understand my problem and help me out directly without asking for money and a gig first is what I really liked about our work together. Plus he is very skilled in what he does and he could find me a solution within a few hours.<i
@@ -430,7 +430,7 @@
               <h4>Web Designer and Online Marketer</h4>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="4"
+          <div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="1"
             style="width: 406.667px; margin-right: 20px;" role="group" aria-label="10 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>Sabit is super duper great at his job! I can recommend him to anyone who needs a service like he offers! He is communicative he do an explanation videos just for me to understand and clarify things with him. He really provides everything I need! Thank you Sabit, you’re the best!<i
@@ -440,7 +440,7 @@
               <h4>CEO @ <a href="https://www.advantedge.com.ph/">AdvantEdge</a></h4>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide-duplicate-active" data-swiper-slide-index="0"
+          <div class="swiper-slide swiper-slide-duplicate-active" data-swiper-slide-index="2"
             style="width: 406.667px; margin-right: 20px;" role="group" aria-label="11 / 11">
             <div class="testimonial-item">
               <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>msjsabit, nice guy, hard working, knows his stuff. It is not easy to honest find an honest reliable developer these days. msjsabit always responded and did exactly what I needed plus more. I am looking forward to my next project with him. Thank you 10/10<i
@@ -449,7 +449,7 @@
               <h3>design17 (Anonymous)</h3>
               <h4></h4>
             </div>
-          </div> -->
+          </div>
         <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span
             class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button"
             aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet" tabindex="0" role="button"
