--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
           <div class="swiper-slide swiper-slide-duplicate-next" data-swiper-slide-index="1"
             style="width: 406.667px; margin-right: 20px;" role="group" aria-label="5 / 11">
             <div class="testimonial-item">
-              <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>Fabulous seller, good communication and excellent work<i
+              <p><i class="bx bxs-quote-alt-left quote-icon-left"></i>Sabit is super duper great at his job! I can recommend him to anyone who needs a service like he offers! He is communicative he do an explanation videos just for me to understand and clarify things with him. He really provides everything I need! Thank you Sabit, you’re the best!<i
                   class="bx bxs-quote-alt-right quote-icon-right"></i></p><img
-                src="assets/img/testimonials/pro-pic-anonymous.jpg" class="testimonial-img" alt="">
-              <h3>daniselect (Anonymous)</h3>
-              <h4></h4>
+                src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <h3>Joanna Valenton</h3>
+              <h4>CEO @ <a href="https://www.advantedge.com.ph/">AdvantEdge</a></h4>
             </div>
           </div>
           <div class="swiper-slide" data-swiper-slide-index="2" style="width: 406.667px; margin-right: 20px;"
